# maple

./: .gitignore  Cargo.toml  FAQ.md  LICENSE-MIT  PRINCIPLES.md  README.md  build.rs  maple.code-workspace
src/: app.rs  camera.rs  camera_controller.rs  display.rs  doc.md  error.rs  gpu.rs  iced_triangle.rs  index.html  instance.rs  lib.rs  pipeline.rs  runtime.rs  texture.rs  uniforms.rs  vertex.rs  wgpu_cube_example.rs  window.rs
src/iced/: layer.rs  mod.rs  msaa.rs  point.rs  rectangle.rs
src/old/: rgx_example.rs  wgpu_framework_example.rs  wgpu_hello_triangle_example.rs  wgpu_shadow_example.rs
src/render/: camera.rs  display.rs  instance.rs  math.rs  mesh.rs  mod.rs  pipeline.rs  primitive.rs  renderer.rs  texture.rs  transform.rs  types.rs  uniform.rs  vertex.rs
src/render/shader/: shader.frag  shader.frag.spv  shader.vert  shader.vert.spv
src/shader/: shader.frag.spv  shader.vert  shader.vert.spv
