[package]
name = "maple"
version = "0.1.0"
authors = ["Gavin Rossiter <rossiter.gavin@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Simple cross platform renderer and ui toolkit."
repository = "https://github.com/krooq/maple"

[lib]
name = "maple"

[dependencies]
wgpu = { path = "../wgpu-rs" }

winit = { version = "0.22.2" }
raw-window-handle = "0.3.3"

futures = "0.3.5"

log = "0.4.8"
env_logger = "0.7.1"
anyhow = "1.0.31"

cgmath = "0.17.0"
glam = "0.8.7"

zerocopy = "0.3.0"
bytemuck = "1.2.0"

[build-dependencies]
glsl-to-spirv = "0.1.7"