[package]
name = "maple"
version = "0.1.0"
authors = ["Gavin Rossiter <rossiter.gavin@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Simple cross platform renderer and ui toolkit."
repository = "https://github.com/krooq/maple"

[lib]
name = "maple"

[dependencies]
# graphics
wgpu = { path = "../wgpu-rs", features = ["vulkan"] }
image = "0.23.6"
# windows
winit = { version = "0.22.2" }
raw-window-handle = "0.3.3"
# concurrency
futures = "0.3"
# errors
log = "0.4.8"
env_logger = "0.7.1"
anyhow = "1.0.31"
thiserror = "1.0.20"
# math
glam = "0.9.1"
mint = "0.5.5"
ultraviolet = "0.4.6"
cgmath = { version="0.17.0", features = ["mint"] }
# data
zerocopy = "0.3.0"
bytemuck = "1.2.0"
# architecture
legion = "0.2.4"

[build-dependencies]
glsl-to-spirv = "0.1.7"