[package]
name = "maple"
version = "0.1.0"
authors = ["Gavin Rossiter <rossiter.gavin@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Simple cross platform renderer."
repository = "https://github.com/krooq/maple"

[lib]
name = "maple"

[dependencies]
# graphics
wgpu = { path = "../wgpu-rs", features = ["vulkan"] }
image = "0.23.6"
# windows
winit = { version = "0.22.2" }
raw-window-handle = "0.3.3"
# concurrency
futures = "0.3"
# errors
log = "0.4.8"
env_logger = "0.7.1"
anyhow = "1.0.31"
thiserror = "1.0.20"
# math
# mint = "0.5.5"
cgmath = "0.17.0"
# data
bytemuck = "1.2.0"


[build-dependencies]
glsl-to-spirv = "0.1.7"